--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -49,16 +49,16 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <img src="{% static 'images/bed.jpg' %}" width="100" height="70" alt="logo"/>
-            <a class="navbar-brand" href="{% url 'beds:home' %}" style="float: right">Douglas County Emergency Services</a>
+            <a class="navbar-brand" href="{% url 'events:home' %}" style="float: right">Douglas County Emergency Services</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar" style="float: right;">
             <ul class="nav navbar-nav">
 
                 {% if user.is_authenticated %}
                     {% if user.is_superuser%}
-                        <li><a href="{% url 'beds:admin_home' %}">Admin</a></li>
+                        <li><a href="{% url 'events:admin_home' %}">Admin</a></li>
                     {% elif user.groups.all.0.name == "Nurse" %}
-                        <li><a href="{% url 'beds:nurse_home' %}">Nurse</a></li>
+                        <li><a href="{% url 'events:nurse_home' %}">Nurse</a></li>
 
                     {% endif %}
                 {% endif %}
@@ -75,7 +75,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
-                            <li><a href="{% url 'beds:password_change'%}"><i class="fa fa-btn fa-sign-out"></i>Change Password</a></li>
+                            <li><a href="{% url 'events:password_change'%}"><i class="fa fa-btn fa-sign-out"></i>Change Password</a></li>
                         </ul>
                     </li>
                 {% else %}
