--- a/events/templates/events/nurse_base.html
+++ b/events/templates/events/nurse_base.html
@@ -43,26 +43,20 @@
         }
     </style>
 </head>
-<body id="app-layout" class="body" background="{% static 'images/background.jpg' %}" style="height: 100%;
+<body id="app-layout" class="body" background="{% static 'images/bg2.png' %}" style="height: 100%;
   background-repeat: no-repeat;background-size: cover;">
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <img src="{% static 'images/bed.jpg' %}" width="100" height="70" alt="logo"/>
-            <a class="navbar-brand" href="{% url 'beds:home' %}" style="float: right">Douglas County Emergency Services</a>
+            <a class="navbar-brand" href="{% url 'events:home' %}" style="float: right">Douglus County Emergency Services</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar" style="float: right;">
             <ul class="nav navbar-nav">
 
-                {% if user.is_authenticated %}
-                    {% if user.is_superuser%}
-                        <li><a href="{% url 'beds:admin_home' %}">Admin</a></li>
-                    {% elif user.groups.all.0.name == "Nurse" %}
-                        <li><a href="{% url 'beds:nurse_home' %}">Nurse</a></li>
-
-                    {% endif %}
-                {% endif %}
-
+                 {% if user.is_authenticated %}
+                    <li><a href="{% url 'events:nurse_home' %}">Nurse</a></li>
+                 {% endif %}
 
             </ul>
 
@@ -75,7 +69,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
-                            <li><a href="{% url 'beds:password_change'%}"><i class="fa fa-btn fa-sign-out"></i>Change Password</a></li>
+                            <li><a href=""><i class="fa fa-btn fa-sign-out"></i>Change Password</a></li>
                         </ul>
                     </li>
                 {% else %}
