First responder view
Created a view for the first responder that goes through all beds.

--- a/beds/templates/beds/base.html
+++ b/beds/templates/beds/base.html
@@ -1,8 +1,8 @@
-{% load staticfiles %}
+﻿{% load staticfiles %}
 
 <html lang="en">
 <head>
-    <title>Douglas Country Emergency Services</title>
+    <title>Douglas County Emergency Services</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
